# ethtool-lua

./: CMakeLists.txt  README.md  ethtool.c
.github/workflows/: cmake-multi-platform.yml
